<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.johncasey.getflocked2.MainActivity">

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp"
        android:id="@+id/agility"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/agility"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:id="@+id/vision"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/Speed" />

    <TextView
        android:text="@string/agility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed"
        android:layout_alignRight="@+id/Speed"
        android:layout_alignEnd="@+id/Speed"
        android:layout_marginTop="25dp"
        android:id="@+id/Agility" />

    <TextView
        android:text="Vision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/agility"
        android:layout_alignRight="@+id/Agility"
        android:layout_alignEnd="@+id/Agility"
        android:layout_marginTop="12dp"
        android:id="@+id/textView6"
        tools:ignore="HardcodedText" />

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/Speed"
        android:layout_toStartOf="@+id/Speed">


        <RadioButton
            android:text="@string/north"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="29dp"
            android:id="@+id/north"
            android:onClick="onRadioClick" />

        <RadioButton
        android:text="@string/south"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/south"
            android:onClick="onRadioClick"   />

        <RadioButton
        android:text="@string/east"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/east"
            android:onClick="onRadioClick" />

    <RadioButton
        android:text="@string/west"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/west"
        android:onClick="onRadioClick" />

    <RadioButton
        android:text="@string/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/center"
        android:onClick="onRadioClick"  />

    </RadioGroup>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/speed"
        android:layout_below="@+id/Speed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/size"
        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onProgressChanged" />

    <Button
        android:text="@string/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/begin"
        android:layout_marginBottom="17dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        tools:ignore="RtlHardcoded"
        android:layout_marginBottom="51dp"
        android:layout_above="@+id/begin"
        android:layout_alignLeft="@+id/begin"
        android:layout_alignStart="@+id/begin" />


</RelativeLayout>
